<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
	    android:title="@string/p_link_usb">

        <de.duenndns.ListPreferenceWithValue
                android:key="baudrate"
		android:title="@string/p_serial_baudrate"
		android:summary="@string/p_serial_baudrate_summary"
                android:entries="@array/p_serial_baudrates"
                android:entryValues="@array/p_serial_baudrates"
		android:defaultValue="115200"
		android:dialogTitle="@string/p_serial_baudrate" />

        <de.duenndns.EditTextPreferenceWithValue
                android:key="ptt.tail"
		android:inputType="number"
		android:defaultValue="100"
		android:hint="100"
		android:title="@string/p_ptt_tail"
		android:summary="@string/p_ptt_tail_summary"
		android:dialogTitle="@string/p_ptt_tail_entry" />

    </PreferenceCategory>
</PreferenceScreen>
